--- a/index.html
+++ b/index.html
@@ -146,6 +146,21 @@
           
         </article>
       </section>
+      <section class="info-section">
+<h3 class="info-subtitle">About us</h3>
+<h2 class="info-title">We are a community of content writers who share their learnings</h2>
+<p class="info-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima dicta rem ad saepe blanditiis cupiditate, impedit eius, tempore, accusamus ut modi harum. Quas officiis aperiam dolor magni possimus nihil debitis.</p>
+<button class="info-button" type="button">Read More</button>
+
+<h3 class="info-subtitle">Our mision</h3>
+<h2 class="info-title">Creating valuable content for creatives all around the world</h2>
+<p class="info-button">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, cupiditate! Quod sunt adipisci qui nesciunt. Sequi laudantium fuga maiores eligendi numquam iste corrupti iusto aliquid, minus animi, laborum minima quam!</p>
+      </section>
+      <section class="plan-section">
+<h2></h2>
+<article></article>
+    article
+      </section>
     </main>
 
     <footer class="footer-section"></footer>
