--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,10 @@
       <img src="./image/Logo.png" alt="logo" />
       <ul class="header-list">
         <li class="header-item">
-          <a class="header-link" href="">Home</a>
+          <a class="header-link" href="./index.html">Home</a>
         </li>
         <li class="header-item">
-          <a class="header-link" href="">Blog</a>
+          <a class="header-link" href="./blog.html">Blog</a>
         </li>
         <li class="header-item">
           <a class="header-link" href="">About Us</a>
@@ -23,9 +23,11 @@
     </header>
     <main>
       <section class="hero-section">
-        <p class="hero-text">Featured Post</p>
-        <h2 class="hero-title">Step-by-step guide to choosing great font pairs</h2>
-        <p class="hero-text">By John Doe l May 23, 2022</p>
+         <h3 class="hero-subtitle">Featured Post</h3>
+        <h2 class="hero-title">
+          Step-by-step guide to choosing great font pairs
+        </h2>
+        <p class="hero-subtext">By John Doe l May 23, 2022</p>
         <p class="hero-text">
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
           dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -34,7 +36,83 @@
         <button class="hero-button" type="button">Read More ></button>
         <img class="hero-photo" src="./image/hero-photo.png" alt="hero" />
       </section>
-      <section></section>
+      <section class="posts-section">
+        <h2 class="pasts-title">All posts</h2>
+        <ul class="pasts-list">
+          <li class="pasts-title">
+            <article class="pasts-article">
+              <h3 class="pasts-subtitle">Startup</h3>
+              <h2 class="pasts-title">Logo design trends to avoid in 2022</h2>
+              <p class="pasts-text">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident.
+              </p>
+              <img class="pasts-photo" src="./image/posts1.png" alt="" />
+            </article>
+          </li>
+
+          <li class="pasts-title">
+            <article class="pasts-article">
+              <h3 class="pasts-subtitle">BUSINESS</h3>
+              <h2 class="pasts-title">
+                How to build rapport with your web design clients
+              </h2>
+              <p class="pasts-text">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident.
+              </p>
+              <img class="pasts-photo" src="./image/posts2.png" alt="" />
+            </article>
+          </li>
+
+          <li class="pasts-title">
+            <article class="pasts-article">
+              <h3 class="pasts-subtitle">Startup</h3>
+              <h2 class="pasts-title">Logo design trends to avoid in 2022</h2>
+              <p class="pasts-text">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident.
+              </p>
+              <img class="pasts-photo" src="./image/posts3.png" alt="" />
+            </article>
+          </li>
+
+          <li class="pasts-title">
+            <article class="pasts-article">
+              <h3 class="pasts-subtitle">TECHNOLOGY</h3>
+              <h2 class="pasts-title">
+                8 Figma design systems you can download for free today
+              </h2>
+              <p class="pasts-text">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident.
+              </p>
+              <img class="pasts-photo" src="./image/posts4.png" alt="" />
+            </article>
+          </li>
+
+          <li class="pasts-title">
+            <article class="pasts-article">
+              <h3 class="pasts-subtitle">ECONOMY</h3>
+              <h2 class="pasts-title">
+                Font sizes in UI design: The complete guide to follow
+              </h2>
+              <p class="pasts-text">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident.
+              </p>
+              <img class="pasts-photo" src="./image/posts1.png" alt="" />
+            </article>
+            <button class="pasts-button" type="button"> Prev </button>
+            <button class="pasts-button" type="button">Next </button>
+          </li>
+        </ul>
+      </section>
       <section class="plan-section">
         <h2 class="plan-title">Choose A Catagory</h2>
         <ul class="plan-list">
