--- a/blog.html
+++ b/blog.html
@@ -19,11 +19,11 @@
           <a class="header-link" href="">About Us</a>
         </li>
       </ul>
-      <button class="header-button" type="button">Subscribe</button>
+      <button class="header-subbutton" type="button">Subscribe</button>
     </header>
     <main>
       <section class="hero-section">
-         <h3 class="hero-subtitle">Featured Post</h3>
+        <h3 class="hero-subtitle">Featured Post</h3>
         <h2 class="hero-title">
           Step-by-step guide to choosing great font pairs
         </h2>
@@ -108,8 +108,8 @@
               </p>
               <img class="pasts-photo" src="./image/posts1.png" alt="" />
             </article>
-            <button class="pasts-button" type="button"> Prev </button>
-            <button class="pasts-button" type="button">Next </button>
+            <button class="pasts-button" type="button">Prev</button>
+            <button class="pasts-button" type="button">Next</button>
           </li>
         </ul>
       </section>
