--- a/blog.html
+++ b/blog.html
@@ -4,230 +4,258 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
+     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header class="header-section">
-      <img src="./image/Logo.png" alt="logo" />
-      <ul class="header-list">
-        <li class="header-item">
-          <a class="header-link" href="./index.html">Home</a>
-        </li>
-        <li class="header-item">
-          <a class="header-link" href="./blog.html">Blog</a>
-        </li>
-        <li class="header-item">
-          <a class="header-link" href="">About Us</a>
-        </li>
-      </ul>
-      <button class="header-subbutton" type="button">Subscribe</button>
+      <div class="container">
+        <img src="./image/Logo.png" alt="logo" />
+        <ul class="header-list">
+          <li class="header-item">
+            <a class="header-link" href="./index.html">Home</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="./blog.html">Blog</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="">About Us</a>
+          </li>
+        </ul>
+        <button class="header-subbutton" type="button">Subscribe</button>
+      </div>
     </header>
     <main>
       <section class="hero-section">
-        <h3 class="hero-subtitle">Featured Post</h3>
-        <h2 class="hero-title">
-          Step-by-step guide to choosing great font pairs
-        </h2>
-        <p class="hero-subtext">By John Doe l May 23, 2022</p>
-        <p class="hero-text">
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident.
-        </p>
-        <button class="hero-button" type="button">Read More ></button>
-        <img class="hero-photo" src="./image/hero-photo.png" alt="hero" />
+        <div class="container">
+          <h3 class="hero-subtitle">Featured Post</h3>
+          <h2 class="hero-title">
+            Step-by-step guide to choosing great font pairs
+          </h2>
+          <p class="hero-subtext">By John Doe l May 23, 2022</p>
+          <p class="hero-text">
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident.
+          </p>
+          <button class="hero-button" type="button">Read More ></button>
+          <img class="hero-photo" src="./image/hero-photo.png" alt="hero" />
+        </div>
       </section>
       <section class="posts-section">
-        <h2 class="pasts-title">All posts</h2>
-        <ul class="pasts-list">
-          <li class="pasts-title">
-            <article class="pasts-article">
-              <h3 class="pasts-subtitle">Startup</h3>
-              <h2 class="pasts-title">Logo design trends to avoid in 2022</h2>
-              <p class="pasts-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
-              <img class="pasts-photo" src="./image/posts1.png" alt="" />
-            </article>
-          </li>
+        <div class="container">
+          <h2 class="pasts-title">All posts</h2>
+          <ul class="pasts-list">
+            <li class="pasts-title">
+              <article class="pasts-article">
+                <h3 class="pasts-subtitle">Startup</h3>
+                <h2 class="pasts-title">Logo design trends to avoid in 2022</h2>
+                <p class="pasts-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+                <img class="pasts-photo" src="./image/posts1.png" alt="" />
+              </article>
+            </li>
 
-          <li class="pasts-title">
-            <article class="pasts-article">
-              <h3 class="pasts-subtitle">BUSINESS</h3>
-              <h2 class="pasts-title">
-                How to build rapport with your web design clients
-              </h2>
-              <p class="pasts-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
-              <img class="pasts-photo" src="./image/posts2.png" alt="" />
-            </article>
-          </li>
+            <li class="pasts-title">
+              <article class="pasts-article">
+                <h3 class="pasts-subtitle">BUSINESS</h3>
+                <h2 class="pasts-title">
+                  How to build rapport with your web design clients
+                </h2>
+                <p class="pasts-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+                <img class="pasts-photo" src="./image/posts2.png" alt="" />
+              </article>
+            </li>
 
-          <li class="pasts-title">
-            <article class="pasts-article">
-              <h3 class="pasts-subtitle">Startup</h3>
-              <h2 class="pasts-title">Logo design trends to avoid in 2022</h2>
-              <p class="pasts-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
-              <img class="pasts-photo" src="./image/posts3.png" alt="" />
-            </article>
-          </li>
+            <li class="pasts-title">
+              <article class="pasts-article">
+                <h3 class="pasts-subtitle">Startup</h3>
+                <h2 class="pasts-title">Logo design trends to avoid in 2022</h2>
+                <p class="pasts-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+                <img class="pasts-photo" src="./image/posts3.png" alt="" />
+              </article>
+            </li>
 
-          <li class="pasts-title">
-            <article class="pasts-article">
-              <h3 class="pasts-subtitle">TECHNOLOGY</h3>
-              <h2 class="pasts-title">
-                8 Figma design systems you can download for free today
-              </h2>
-              <p class="pasts-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
-              <img class="pasts-photo" src="./image/posts4.png" alt="" />
-            </article>
-          </li>
+            <li class="pasts-title">
+              <article class="pasts-article">
+                <h3 class="pasts-subtitle">TECHNOLOGY</h3>
+                <h2 class="pasts-title">
+                  8 Figma design systems you can download for free today
+                </h2>
+                <p class="pasts-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+                <img class="pasts-photo" src="./image/posts4.png" alt="" />
+              </article>
+            </li>
 
-          <li class="pasts-title">
-            <article class="pasts-article">
-              <h3 class="pasts-subtitle">ECONOMY</h3>
-              <h2 class="pasts-title">
-                Font sizes in UI design: The complete guide to follow
-              </h2>
-              <p class="pasts-text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
-              <img class="pasts-photo" src="./image/posts1.png" alt="" />
-            </article>
-            <button class="pasts-button" type="button">Prev</button>
-            <button class="pasts-button" type="button">Next</button>
-          </li>
-        </ul>
+            <li class="pasts-title">
+              <article class="pasts-article">
+                <h3 class="pasts-subtitle">ECONOMY</h3>
+                <h2 class="pasts-title">
+                  Font sizes in UI design: The complete guide to follow
+                </h2>
+                <p class="pasts-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+                <img class="pasts-photo" src="./image/posts1.png" alt="" />
+              </article>
+              <button class="pasts-button" type="button">Prev</button>
+              <button class="pasts-button" type="button">Next</button>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="plan-section">
-        <h2 class="plan-title">Choose A Catagory</h2>
-        <ul class="plan-list">
-          <li class="plan-item">
-            <article>
-              <img src="./image/plan-icon1.png" alt="icon1" />
-              <h2>Business</h2>
-              <p class="plan-text">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-              </p>
-            </article>
-          </li>
-          <li class="plan-item">
-            <article>
-              <img src="./image/plan-icon2.png" alt="icon2" />
-              <h2 class="plan-title">Startup</h2>
-              <p class="plan-text">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-              </p>
-            </article>
-          </li>
-          <li class="plan-item">
-            <article>
-              <img src="./image/plan-icon3.png" alt="icon3" />
-              <h2 class="plan-title">Economy</h2>
-              <p class="plan-text">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-              </p>
-            </article>
-          </li>
-          <li class="plan-item">
-            <article>
-              <img src="./image/plan-icon4.png" alt="icon4" />
-              <h2 class="plan-title">Technology</h2>
-              <p class="plan-text">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-              </p>
-            </article>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="plan-title">Choose A Catagory</h2>
+          <ul class="plan-list">
+            <li class="plan-item">
+              <article>
+                <img src="./image/plan-icon1.png" alt="icon1" />
+                <h2>Business</h2>
+                <p class="plan-text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                </p>
+              </article>
+            </li>
+            <li class="plan-item">
+              <article>
+                <img src="./image/plan-icon2.png" alt="icon2" />
+                <h2 class="plan-title">Startup</h2>
+                <p class="plan-text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                </p>
+              </article>
+            </li>
+            <li class="plan-item">
+              <article>
+                <img src="./image/plan-icon3.png" alt="icon3" />
+                <h2 class="plan-title">Economy</h2>
+                <p class="plan-text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                </p>
+              </article>
+            </li>
+            <li class="plan-item">
+              <article>
+                <img src="./image/plan-icon4.png" alt="icon4" />
+                <h2 class="plan-title">Technology</h2>
+                <p class="plan-text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                </p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="join-section">
-        <h2 class="join-title">Join our team to be a part of our story</h2>
-        <p class="join-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt.
-        </p>
-        <button class="join-button" type="button">Join Now</button>
+        <div class="container">
+          <h2 class="join-title">Join our team to be a part of our story</h2>
+          <p class="join-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt.
+          </p>
+          <button class="join-button" type="button">Join Now</button>
+        </div>
       </section>
     </main>
     <footer class="footer-section">
-      <a class="footer-link" href="">
-        <img class="footer-photo" src="./image/Logo.png" alt="logo" />
-      </a>
-      <ul class="footer-list">
-        <li class="footer-item">
-          <a class="footer-link" href="">Home</a>
-        </li>
-        <li class="footer-item">
-          <a class="footer-link" href="">Blog</a>
-        </li>
-        <li class="footer-item">
-          <a class="footer-link" href="">About us</a>
-        </li>
-        <li class="footer-item">
-          <a class="footer-link" href="">Contact us</a>
-        </li>
-        <li class="footer-item">
-          <a class="footer-link" href="">Privacy Policy</a>
-        </li>
-      </ul>
-      <article class="footer-article">
-        <h2 class="footer-article">
-          Subscribe to our news letter to get latest updates and news
-        </h2>
-        <form class="footer-form">
-          <input
-            class="footer-input"
-            type="text"
-            placeholder="Enter Your Email"
-          />
-          <button class="footer-button" type="submit">Subscribe</button>
-        </form>
-      </article>
-      <address class="footer-address">Finstreet 118 2561 Fintown</address>
-      <a class="footer-link" href=" mailto:Hello@finsweet.com"
-        >Hello@finsweet.com
-      </a>
-      <a class="footer-link" href="tel:02079932905">02079932905</a>
-      <ul class="footer-list">
-        <li class="footer-item">
-          <img
-            class="footer-photo"
-            src="./image/authors-facebook.png"
-            alt="facebook"
-          />
-        </li>
-        <li class="footer-item">
-          <img
-            class="footer-photo"
-            src="./image/authors-twitter.png"
-            alt="twitter"
-          />
-        </li>
-        <li class="footer-item">
-          <img
-            class="footer-photo"
-            src="./image/authors-instagram.png"
-            alt="instagrame"
-          />
-        </li>
-        <li class="footer-item">
-          <img class="footer-photo" src="./image/authors-in.png" alt="in" />
-        </li>
-      </ul>
+      <div class="container">
+        <a class="footer-link" href="">
+          <img class="footer-photo" src="./image/Logo.png" alt="logo" />
+        </a>
+        <ul class="footer-list">
+          <li class="footer-item">
+            <a class="footer-link" href="">Home</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="">Blog</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="">About us</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="">Contact us</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="">Privacy Policy</a>
+          </li>
+        </ul>
+        <article class="footer-article">
+          <h2 class="footer-article">
+            Subscribe to our news letter to get latest updates and news
+          </h2>
+          <form class="footer-form">
+            <input
+              class="footer-input"
+              type="text"
+              placeholder="Enter Your Email"
+            />
+            <button class="footer-button" type="submit">Subscribe</button>
+          </form>
+        </article>
+        <address class="footer-address">Finstreet 118 2561 Fintown</address>
+        <a class="footer-link" href=" mailto:Hello@finsweet.com"
+          >Hello@finsweet.com
+        </a>
+        <a class="footer-link" href="tel:02079932905">02079932905</a>
+        <ul class="footer-list">
+          <li class="footer-item">
+            <img
+              class="footer-photo"
+              src="./image/authors-facebook.png"
+              alt="facebook"
+            />
+          </li>
+          <li class="footer-item">
+            <img
+              class="footer-photo"
+              src="./image/authors-twitter.png"
+              alt="twitter"
+            />
+          </li>
+          <li class="footer-item">
+            <img
+              class="footer-photo"
+              src="./image/authors-instagram.png"
+              alt="instagrame"
+            />
+          </li>
+          <li class="footer-item">
+            <img class="footer-photo" src="./image/authors-in.png" alt="in" />
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
