--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+     <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="body">
     <header class="header-section">
-      <div class="container">
+      <div class="container box">
         <svg
           class="header-logo"
           width="140"
@@ -481,10 +494,10 @@
         </a>
         <ul class="footer-list">
           <li class="footer-item">
-            <a class="footer-link" href="">Home</a>
+            <a class="footer-link" href="./index.html">Home</a>
           </li>
           <li class="footer-item">
-            <a class="footer-link" href="">Blog</a>
+            <a class="footer-link" href="./blog.html">Blog</a>
           </li>
           <li class="footer-item">
             <a class="footer-link" href="">About us</a>
