--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-     <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sen:wght@700&display=swap"
       rel="stylesheet"
     />
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="body">
@@ -92,7 +92,7 @@
 
     <main class="main-section">
       <section class="startup-section">
-        <div class="container">
+        <div class="container sturtup-box">
           <h3 class="startup-subtitle">
             Posted on <span class="startup-span">startup</span>
           </h3>
@@ -102,7 +102,7 @@
           <p class="startup-text">
             <span class="startup-name">By James West</span> | May 23, 2022
           </p>
-          <p class="startup-text">
+          <p class="startup-subtext">
             Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident.
@@ -169,7 +169,7 @@
         </div>
       </section>
       <section class="info-section">
-        <div class="container">
+        <div class="container info-box">
           <h3 class="info-subtitle">About us</h3>
           <h2 class="info-title">
             We are a community of content writers who share their learnings
@@ -430,12 +430,12 @@
         </div>
       </section>
       <section class="logo-section">
-        <div class="container">
-          <p class="logo-text">We are</p>
+        <div class="container logo-box">
+          <div class="logo-subcontainer">
+            <p class="logo-text">We are</p>
+            <p class="logo-subtext">Featured in</p>
+          </div>
           <ul class="logo-list">
-            <li class="logo-item">
-              <img class="logo-photo" src="./image/logo1.png" alt="logo1" />
-            </li>
             <li class="logo-item">
               <img class="logo-photo" src="./image/logo2.png" alt="logo2" />
             </li>
@@ -478,12 +478,14 @@
       </section>
       <section class="join-section">
         <div class="container">
-          <h2 class="join-title">Join our team to be a part of our story</h2>
-          <p class="join-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt.
-          </p>
-          <button class="join-button btn" type="button">Join Now</button>
+          <div class="join-box">
+            <h2 class="join-title">Join our team to be a part of our story</h2>
+            <p class="join-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+            <button class="join-button btn" type="button">Join Now</button>
+          </div>
         </div>
       </section>
     </main>
