--- a/index.html
+++ b/index.html
@@ -494,25 +494,29 @@
         </div>
       </section>
       <section class="article-section">
-        <div class="container">
-          <article>
-            <p class="article-text">TESTIMONIALS</p>
+        <div class="container article-box">
+          <article class="article-article">
+            <p class="article-subtitle">TESTIMONIALS</p>
             <h2 class="article-title">What people say about our blog</h2>
             <p class="article-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor.
             </p>
-            <p class="article-subtext">
+            </article>
+            <article class="article-subarticle">
+ <p class="article-subtext">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
-            <img src="./image/article-man.png" alt="article-man" />
+            <img class="article-photo" src="./image/article-man.png" alt="article-man" />
             <h2 class="article-title">Jonathan Vallem</h2>
             <p class="article-text">New york, USA</p>
             <button type="button"></button>
             <button type="button"></button>
-          </article>
+            </article>
+           
+          
         </div>
       </section>
       <section class="join-section">
