--- a/blog.html
+++ b/blog.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <header class="header-section">
-      <div class="container">
-        <img src="./image/Logo.png" alt="logo" />
+      <div class="container header-section">
+        <img class="logo" src="./image/Logo.png" alt="logo" />
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Home</a>
@@ -34,6 +34,9 @@
           </li>
           <li class="header-item">
             <a class="header-link" href="">About Us</a>
+          </li>
+           <li class="header-item">
+            <a class="header-link" href="">Contact us</a>
           </li>
         </ul>
         <button class="header-subbutton" type="button">Subscribe</button>
