--- a/index.html
+++ b/index.html
@@ -221,11 +221,9 @@
               <li class="plan-item">
                 <article class="plan-article">
                   <div class="plan-subphoto">
-                    <img
-                      class="plan-photo"
-                      src="./image/plan-icon1.png"
-                      alt="icon1"
-                    />
+                    <svg class="plan-icon">
+                      <use href="./image/symbol-defs.svg#icon-plan-icon1"></use>
+                    </svg>
                   </div>
 
                   <h2 class="plan-subtitle">Business</h2>
@@ -237,11 +235,9 @@
               <li class="plan-item">
                 <article class="plan-article">
                   <div class="plan-subphoto">
-                    <img
-                      class="plan-roket"
-                      src="./image/plan-icon2.png"
-                      alt="icon2"
-                    />
+                    <svg class="plan-icon">
+                      <use href="./image/symbol-defs.svg#icon-plan-icon2"></use>
+                    </svg>
                   </div>
 
                   <h2 class="plan-subtitle">Startup</h2>
@@ -253,11 +249,9 @@
               <li class="plan-item">
                 <article class="plan-article">
                   <div class="plan-subphoto">
-                    <img
-                      class="plan-photo"
-                      src="./image/plan-icon3.png"
-                      alt="icon3"
-                    />
+                    <svg class="plan-icon">
+                      <use href="./image/symbol-defs.svg#icon-plan-icon3"></use>
+                    </svg>
                   </div>
 
                   <h2 class="plan-subtitle">Economy</h2>
@@ -269,11 +263,9 @@
               <li class="plan-item">
                 <article class="plan-article">
                   <div class="plan-subphoto">
-                    <img
-                      class="plan-hade"
-                      src="./image/plan-icon4.png"
-                      alt="icon4"
-                    />
+                    <svg class="plan-icon">
+                      <use href="./image/symbol-defs.svg#icon-plan-icon4"></use>
+                    </svg>
                   </div>
 
                   <h2 class="plan-subtitle">Technology</h2>
@@ -362,32 +354,40 @@
                 <p class="authors-text">Content Writer @Company</p>
                 <ul class="authors-list">
                   <li class="authors-item">
-                    <img
-                      class="authors-photo"
-                      src="./image/authors-facebook.png"
-                      alt="facebook"
-                    />
+                    <a href="">
+                      <svg class="authors-icon">
+                        <use
+                          href="./image/symbol-defs.svg#icon-authors-facebook"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="authors-item">
-                    <img
-                      class="authors-photo"
-                      src="./image/authors-twitter.png"
-                      alt="twitter"
-                    />
+                    <a href="">
+                      <svg class="authors-icon">
+                        <use
+                          href="./image/symbol-defs.svg#icon-authors-twitter"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="authors-item">
-                    <img
-                      class="authors-photo"
-                      src="./image/authors-instagram.png"
-                      alt="instagrame"
-                    />
+                    <a href="">
+                      <svg class="authors-icon">
+                        <use
+                          href="./image/symbol-defs.svg#icon-authors-instogram"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="authors-item">
-                    <img
-                      class="authors-photo"
-                      src="./image/authors-in.png"
-                      alt="in"
-                    />
+                    <a href="">
+                      <svg class="authors-icon">
+                        <use
+                          href="./image/symbol-defs.svg#icon-authors-in"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </article>
@@ -514,9 +514,7 @@
               eiusmod tempor.
             </p>
           </article>
-          <div class="article-line">
-
-          </div>
+          <div class="article-line"></div>
           <article class="article-subarticle">
             <p class="article-subtext">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
